# slim

./: .gitignore  CMakeLists.txt  ChangeLog  Ck.cpp  Ck.h  INSTALL  INSTALL.markdown  INSTALL.md  Makefile  Makefile.freebsd  Makefile.netbsd  Makefile.openbsd  PAM.cpp  PAM.h  README  README.markdown  README.md  THEMES  THEMES.md  app.cpp  app.h  cfg.cpp  cfg.h  const.h  image.cpp  image.h  input.cpp  input.h  jpeg.c  log.cpp  log.h  main.cpp  numlock.cpp  numlock.h  panel.cpp  panel.h  png.c  slim.1  slim.conf  slimlock.1  (+8 more)
cmake/modules/: FindCkConnector.cmake
themes/: CMakeLists.txt
themes/default/: CMakeLists.txt  COPYRIGHT.background  COPYRIGHT.panel  slim.theme
